# parkinsons-project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
code/processing/: aggregate.py  outliers.py
config/: custom.mplstyle
config/matplotlib/: mhedas.mplstyle
data/dummy/: sample_healthy.json  sample_parkinson.json
data/processed/: parkinsons_avg.data  parkinsons_clean.data  parkinsons_norm.data
misc/: refs.bib
report/: main.sty  main.tex  mhedas.sty
report/sections/: analysis_and_findings.tex  conclusions.tex  introduction.tex  methodology.tex  results.tex
results/2025-01-16_21-53-10/: metrics.txt  model_avg.pkl  model_clean.pkl  model_norm.pkl
results/2025-01-17_00-43-46/: metrics.txt  model_avg.pkl  model_clean.pkl  model_norm.pkl
results/2025-01-17_00-43-59/: model_avg.pkl  model_clean.pkl  model_norm.pkl
results/20251014_120602/: metrics.txt  model_avg.pkl  model_clean.pkl  model_norm.pkl
src/: main.py
src/api/: index.html  mlapi.py
src/model/: collinearity.py  model_generator.py
src/processing/: aggregate.py  normalize.py  rename.py
